remove #cart styles causing layout issues

--- a/assets/_scss/_layout.scss
+++ b/assets/_scss/_layout.scss
@@ -10,8 +10,7 @@ body {
 }
 
 #content,
-#template,
-#cart {
+#template {
 	padding: 34px 0;
 	min-height: 400px;
 }
